created button to randomly change the colors of all the boxes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="main">
 
     </div>
+    <button id="genColor">Generate Colors</button>
     <script src="app.js"></script>
 </body>
 </html>
