--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Document</title>
-</head>
-<body>
-    <div class="main">
-
+  </head>
+  <body>
+    <div class="container">
+      <div class="buttonGroup">
+        <button id="genGrid">Generate Boxes</button>
+        <button id="genColor">Change Colors</button>
+        <button id="changeCircles">Circles</button>
+        <button id="changeSquares">Squares</button>
+      </div>
+      <div class="main"></div>
     </div>
-    <button id="genColor">Generate Colors</button>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
