added container around. styled

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <div class="buttonGroup">
-        <button id="genGrid">Generate Boxes</button>
-        <button id="genColor">Change Colors</button>
-        <button id="changeCircles">Circles</button>
-        <button id="changeSquares">Squares</button>
+    <div class="wrapper">
+      <div class="container">
+        <div class="buttonGroup">
+          <button id="genGrid">Generate Boxes</button>
+          <button id="genColor">Change Colors</button>
+          <button id="changeCircles">Circles</button>
+          <button id="changeSquares">Squares</button>
+        </div>
+        <div class="main"></div>
       </div>
-      <div class="main"></div>
     </div>
     <script src="app.js"></script>
   </body>
