added stop animation button, updated readme

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
           <button id="changeSquares">Squares</button>
         </div>
         <div class="main"></div>
+        <div class="animation">
+          <button id="animateColor">Animate Colors</button>
+          <button id="stopAnimation">Stop Animation</button>
+        </div>
       </div>
     </div>
     <script src="app.js"></script>
