organized dir, updated readme, placed footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta name="image" property="og:image" content="./images/screenshot_grid.png" />
     <title>CSS Color Grid</title>
   </head>
   <body>
@@ -15,20 +16,29 @@
     </header>
     <div class="gridSystem">
       <div class="column1">
+        <h3>To use:</h3>
+        <hr />
         <p>
-          "Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-          accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae
-          ab illo inventore veritatis et quasi architecto beatae vitae dicta
-          sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-          aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
-          qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
-          dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
-          quia non numquam eius modi tempora incidunt ut labore et dolore magnam
-          aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-          exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex
-          ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in
-          ea voluptate velit esse quam nihil molestiae consequatur, vel illum
-          qui dolorem eum fugiat quo voluptas nulla pariatur?"
+          1. Click <span>Generate Boxes</span> to create a grid of boxes with
+          randomly generated colors.
+        </p>
+        <p>
+          2. Once grid is generated, click <span>Change Colors</span> to
+          randomly generate different colors.
+        </p>
+        <p>3. To change the shape to circles, click <span>Circles.</span></p>
+        <p>4. To change the shape to sqaures, click <span>Squares.</span></p>
+        <p>5. To animate the colors, click <span>Animate Colors.</span></p>
+        <p>6. To stop this animation, click <span>Stop Animation.</span></p>
+        <p>
+          <span
+            >Feel free to check out some of my other projects via my portfolio
+            page, shoot me an email, or find me on LinkedIn. Links down at the
+            bottom.</span
+          >
+        </p>
+        <p>
+          <span>Thanks for taking a look at this project!</span>
         </p>
       </div>
       <div class="wrapper">
@@ -46,7 +56,24 @@
       </div>
     </div>
     <footer>
-      <div></div>
+      <div class="footerText">
+        <a
+          target="_blank"
+          href="https://www.linkedin.com/in/everett-diuguid-583632197/"
+        >
+          <img id="linkedin" src="./images/linkedin.png" />
+        </a>
+        <a target="_blank" href="https://github.com/diuguide">
+          <img src="./images/githubsmall.png" />
+        </a>
+        <a target="_blank" href="https://www.instagram.com/diuguid/">
+          <img id="insta" src="./images/instagram.png" />
+        </a>
+        <div class="nameCode">
+        <p>EVERETT DIUGUID &#9400</p>
+      </div>
+      </div>
+      
     </footer>
     <script src="app.js"></script>
   </body>
