added portfolio links, changed description

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>
           <span
             >Feel free to check out some of my other projects via my portfolio
-            page, shoot me an email, or find me on LinkedIn. Links down at the
+            page or find me on LinkedIn. Links down at the
             bottom.</span
           >
         </p>
@@ -70,8 +70,9 @@
           <img id="insta" src="./images/instagram.png" />
         </a>
         <div class="nameCode">
-        <p>EVERETT DIUGUID &#9400</p>
-      </div>
+        <p>EVERETT DIUGUID &#9400 2020 <a href="https://diuguide.github.io/">Portfolio</a></p>
+        </div>
+        
       </div>
       
     </footer>
