added _blank target

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <img id="insta" src="./images/instagram.png" />
         </a>
         <div class="nameCode">
-        <p>EVERETT DIUGUID &#9400 2020 <a href="https://diuguide.github.io/">Portfolio</a></p>
+        <p>EVERETT DIUGUID &#9400 2020 <a target="_blank" href="https://diuguide.github.io/">Portfolio</a></p>
         </div>
         
       </div>
